--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
       "util": "^0.12.4",
       "wa-sticker-formatter": "^4.3.2",
       "youtube-yts": "^2.0.0",
-      "youtubedl-core": "^4.11.7",
+      "ytdl-core": "^4.11.5",
       "yt-search": "^2.10.4",
-      "ytdl-core": "github:franceking1/flash-dls"
+      "ytdl-core": "github:khlevon/node-ytdl-core#v4.11.4-patch."
    },
    "directories": {
       "lib": "lib",
