--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,6 @@
-build:
-  docker:
-      worker: /Dockerfile
-run:
-   worker: npm start
+ #heroku.yml file data to run Container
+ build:
+   docker:
+       web: Dockerfile 
+ run:
+   web: npm start
