--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
    "license": "Apache-2.0",
    "dependencies": {
       "@adiwajshing/keyed-db": "^0.2.4",
-      "@distube/ytdl-core": "^4.13.5",
       "@hapi/boom": "^9.1.4",
       "@whiskeysockets/baileys": "6.6.0",
       "acrcloud": "^1.4.0",
@@ -63,10 +62,9 @@
       "translatte": "^3.0.1",
       "util": "^0.12.4",
       "wa-sticker-formatter": "^4.3.2",
-      "youtube-yts": "^2.0.0",
+      "youtubei.js": "^7.0.0",
       "ytdl-core": "^4.11.5",
-      "yt-search": "^2.10.4",
-      "ytdl-core": "github:khlevon/node-ytdl-core#v4.11.4-patch."
+      "ytdl-secktor": "^0.0.1-development"
    },
    "directories": {
       "lib": "lib",
